--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27, py36
 
 [testenv]
-commands = py.test src -v
+commands = py.test src --cov=src --cov-report term-missing -v --durations=0
 deps = 
-    pytest
-    pytest.cov
+    py.test
+    pytest-cov
